# tennis_atp_scraper

./: README.md  docker-compose.yml  pyproject.toml
app/databases/mongo_database/: mongo_database.py
app/models/: models.py  rdl.py
app/rel_deep/: create_dataset.py  create_task.py  model.py  train_model.py
app/scraper/: analyze_data.py  clean_data.py  mongo_to_csv.py  move_collections.py  scrape_matches.py  scrape_player_stats.py  scrape_ratings.py  scrape_ratings_updated.py  scrape_stats.py  scrape_tournaments.py  scrape_utils.py  scrape_years.py  test.py
